            
                RELEASE HISTORY OF HTSCluster PACKAGE
             ========================================

			 		CHANGES IN HTSCluster VERSION 2.0.3
		
- Fixed typo in calculation of entropy for ICL (thanks to M. Gallopin)
- Added mylogLikePoisMixObs function to calculate log-likelihood for each 
  observation.
  
		CHANGES IN HTSCluster VERSION 2.0.2
		
- Added poisson.glm.mix to package IMPORTS to use the function mylogLikePoisMix
  for all likelihood calculations in order to avoid numerical difficulties (and
  deleted logLikePoisMix from the PoisMixClus and probaPostInit functions).
- Set up initial file for vignette.
- Changed splitSmallEM initializing strategy so as to split the cluster with the
  largest per-cluster entropy (-sum_{i \in k} \log(t_{ik}) rather than randomly
  choosing a cluster to split.
					
		CHANGES IN HTSCluster VERSION 2.0.1
		
- Changed entropy calculation for ICL from -2*sum*(z*log(t)) to -2*sum(t*log(t)).

		CHANGES IN HTSCluster VERSION 1.99.0

- Created vignette and doc directories.
- Moved edgeR to IMPORTS rather than DEPENDS.
- Additional plotting option for lambda using ggplot2 and RColorBrewer, both of
  which have been added as dependencies in the namespace.
- Behavior of clusters can now be interpreted with respect to overall gene expression
  (interpretation = "sum" in the PoisMixClus and PoisMixClusWrapper functions) or with
  respect to mean gene expression (interpretation = "mean").
- Added user-specific parameters init.runs (number of small-EM algorithms to
  run for initialization) and init.iter (number of iterations to run within each
  small-EM algorithm).
- Added highDimensionARI function
- Renormalized posterior probabilities after smoothing in probaPost function.
- Removed smoothing option from logLikePoisMix() and implemented numerical
  technique suggested by P. Papastamoulis to calculate log likelihood.
- Mean.filter argument removed from PoisMixClus function.