@@ -1,8 +1,8 @@
 
 PoisMixClus <- function(y, g, conds, lib.size = TRUE, lib.type = "TMM",  
-	init.type = "small-em", init.runs = 20, init.iter = 10, alg.type = "EM", cutoff = 10e-6, 
+	init.type = "small-em", init.runs = 1, init.iter = 10, alg.type = "EM", cutoff = 10e-6, 
 	iter = 1000, fixed.lambda = NA, equal.proportions = FALSE, prev.labels = NA, 
-	prev.probaPost = NA, verbose = FALSE, interpretation = "sum") {
+	prev.probaPost = NA, verbose = FALSE, interpretation = "sum", EM.verbose = FALSE) {
 
 	## fixed.lambda should be a list of length (number of fixed clusters)
 	## g gives the number of clusters IN ADDITION to the fixed clusters
@@ -244,6 +244,13 @@ PoisMixClus <- function(y, g, conds, lib.size = TRUE, lib.type = "TMM",
 		if(diff < cutoff) go <- 0;
 		if(iter != FALSE & iter == index) go <- 0;
 	}
+	
+	if(EM.verbose == TRUE) {
+		cat("#####################################\n")
+		cat("Number of EM iterations:", index, "\n")
+		cat("Last log-likelihood difference:", diff, "\n")
+		cat("#####################################\n")
+	}
 
 	#####################################
 	## Final estimates of lambda and p ##
@@ -321,9 +328,8 @@ PoisMixClus <- function(y, g, conds, lib.size = TRUE, lib.type = "TMM",
 	results <- list(lambda = lambda.final, pi = pi.final, labels = labels, 
 		probaPost = probaPost, log.like = LL, BIC = -BIC, ICL = -ICL, 
 		alg.type = alg.type, lib.size = lib.size, lib.type = lib.type, s = s,
-		conds = conds)
+		conds = conds, iterations = index, logLikeDiff = diff)
 
 	class(results) <- "HTSCluster"
 	return(results)
-
 }
